
// Code generated - DO NOT EDIT.
// This file is a generated protocol buffer definition and any manual changes will be lost.
syntax = "proto3";
package VOTE_PROXY_FACTORY;

import "google/protobuf/timestamp.proto";
option go_package = "blep.ai/data/connectors/makerdao/smart-contracts/VOTE_PROXY_FACTORY";

message LinkRequested {
	google.protobuf.Timestamp ts = 1;
	bytes Cold = 2;		//	address
	bytes Hot = 3;		//	address
}

message LinkConfirmed {
	google.protobuf.Timestamp ts = 1;
	bytes Cold = 2;		//	address
	bytes Hot = 3;		//	address
	bytes VoteProxy = 4;		//	address
}
